<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp">

    <TextView android:id="@+id/entry_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/default_username"
        android:textSize="@dimen/entry_username_text"
        />

    <ImageView android:id="@+id/entry_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/entry_image_description"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/entry_userName"
        android:src="@drawable/sample_2"
        />

    <RelativeLayout
        android:id="@+id/price_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/entry_image">

        <TextView
            android:id="@+id/entry_priceTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Gray"
            android:text="@string/default_pricetag"
            android:textSize="@dimen/entry_pricetag_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            />
        <Button
            android:id="@+id/entry_buyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buyButton"
            android:textColor="@color/DarkGray"
            android:background="@color/Yellow"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/entry_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Gray"
        android:layout_below="@+id/price_line"
        android:text="@string/default_description"
        android:textSize="@dimen/entry_description_text"
        />

</RelativeLayout>